--- a/app/build.gradle
+++ b/app/build.gradle
@@ -17,19 +17,16 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
-    configurations {
-        all*.exclude group: 'com.google.firebase', module: 'firebase-core'
-        all*.exclude group: 'com.google.firebase', module: 'firebase-iid'
-    }
 }
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
+    compile files('libs/zbar.jar')
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
     compile 'com.android.support:appcompat-v7:25.3.1'
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
     testCompile 'junit:junit:4.12'
-    compile 'me.dm7.barcodescanner:zbar:1.9'
+//    compile 'me.dm7.barcodescanner:zbar:1.9'
 }
